--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,8 @@
 			</plugin>
 		</plugins>
 	</build>
-
+<properties>
+  <sonar.organization>juliobautistasftk</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 </project>
